# rust-learn

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: quickstartup.yaml
_others/: debugging-labs.tar.xz
_others/polkadot-rust-course/: menu.rs
aes/: Cargo.toml
astar-find-error/: .gitignore
astar-find-error/src/: find_error.rs
cards_with_vrf/: Cargo.toml
cards_with_vrf/src/: main.rs
coindime/: Cargo.toml
coindime/src/: main  main.rs
collision/: Cargo.toml
concurrency/: Cargo.toml
experiments/: .gitignore
experiments/src/: experiments.rs
first-function/: Cargo.toml
first-function/src/: main.rs
formatting/: Cargo.toml
guess-game/: Cargo.toml
handle-errors/: Cargo.toml
handle-errors/src/: aes.rs  handle_errors.rs  main  main.rs  vrf.rs
handle-errors/src/dangling_reference/: mod.rs
handle-errors/src/modules/: mod.rs
handle-errors/src/xor/: mod.rs
iterators/: Cargo.toml
map/: Cargo.toml
number/: Cargo.toml
ownership-and-borrowing/: .gitignore  Cargo.toml
passing/: Cargo.toml
polkadot-rust-course/: .gitignore
print/: Cargo.toml
questions/: Cargo.toml
rectangle/: Cargo.toml
scale/: Cargo.toml  README.md
src/: box_fn.rs  collision.rs  conversions.rs  dynamic_dispatch.rs  generics.rs  guess_game.rs  handle_errors.rs  iterators.rs  lifetimes.rs  main.rs  map.rs  ownership_and_borrowing.rs  parity-scale-codec.rs  pattern_matching.rs  quiz.rs  tips_tricks.rs
testing/: .gitignore  Cargo.toml
traits/: Cargo.toml
types-and-variables/: Cargo.toml
vrf/: Cargo.toml
xor/: Cargo.toml
(+301 files in other folders)
