[package]
name = "handle-errors"
version = "0.1.0"
authors = ["Tomasz Waszczyk <tomasz@waszczyk.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3.24"
hex = "0.4.3"
aes = "0.8.1"
rand = "0.8.4"
merlin = "3.0.0"
schnorrkel = "0.10.2"
rand_core = "0.6.3"
sha2 = "*"
sp-core="*"
serde = "*"
anyhow = "1.0.66"

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/*/*" },
]
