[package]
name = "handle-errors"
version = "0.1.0"
authors = ["Tomasz Waszczyk <tomasz.waszczyk@relayr.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3.24"
hex = "0.4.3"
aes = "0.8.1"
rand = "0.8.4"
